# sentinal

./: README.md
Sentinal/Sentinal/: app.py  main.py  models.py  pyproject.toml  routes.py  seed_achievements.py  seed_security_configs.py  tasks.py  test_security_config.py  utils.py  verify_security_configs.py
Sentinal/Sentinal/logs/: app.log.1  app.log.10  app.log.2  app.log.3  app.log.4  app.log.5  app.log.6  app.log.7  app.log.8  app.log.9
Sentinal/Sentinal/static/: manifest.json
Sentinal/Sentinal/static/css/: custom.css  styles.css
Sentinal/Sentinal/static/js/: app-installer.js  app.js  dashboard.js  profile.js  service-worker.js  socket.js
Sentinal/Sentinal/templates/: achievements.html  admin.html  admin_payment.html  base.html  create_script.html  create_security_config.html  dashboard.html  edit_script.html  edit_security_config.html  error.html  execute_script.html  execution_detail.html  index.html  leaderboard.html  login.html  manage_admin_payments.html  offline.html  profile.html  register.html  script_detail.html  scripts.html  security_configs.html  user_achievements.html
