[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-mail>=0.10.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-caching>=2.3.1",
    "flask-cors>=5.0.1",
    "celery>=5.4.0",
    "python-socketio>=5.12.1",
    "werkzeug>=3.1.3",
    "flask-jwt-extended>=4.7.1",
    "flask-socketio>=5.5.1",
    "flask-limiter>=3.12",
    "docker>=7.1.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "flask-wtf>=1.2.2",
    "flask-login>=0.6.3",
]
